--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2025-04-16T16:56:07.150477Z",
      "start_time": "2025-04-16T16:56:02.679521Z"
-    }
+    },
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -17,37 +19,19 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "import tensorflow as tf\n",
     "import keras"
-   ],
-   "outputs": [],
-   "execution_count": 3
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "776ad9ff9b32c19",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-16T16:35:05.897364Z",
      "start_time": "2025-04-16T16:35:05.675660Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "#Load the dataset for phase 2\n",
-    "#first I need the path\n",
-    "data_set = \"C:\\\\Users\\corne\\Downloads\\loan_data.csv\"\n",
-    "df = pd.read_csv(data_set)\n",
-    "print(df.head())\n"
-   ],
-   "id": "776ad9ff9b32c19",
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:3: SyntaxWarning: invalid escape sequence '\\c'\n",
-      "<>:3: SyntaxWarning: invalid escape sequence '\\c'\n",
-      "C:\\Users\\corne\\AppData\\Local\\Temp\\ipykernel_6036\\1115940107.py:3: SyntaxWarning: invalid escape sequence '\\c'\n",
-      "  data_set = \"C:\\\\Users\\corne\\Downloads\\loan_data.csv\"\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -80,61 +64,169 @@
       "3                             No            1  \n",
       "4                             No            1  \n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:3: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "<>:3: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "C:\\Users\\corne\\AppData\\Local\\Temp\\ipykernel_22940\\2224160038.py:3: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "  data_set = \"C:\\\\Users\\corne\\Downloads\\loan_data.csv\"\n"
+     ]
     }
    ],
-   "execution_count": 2
+   "source": [
+    "#Load the dataset for phase 2\n",
+    "#first I need the path\n",
+    "data_set = \"C:\\\\Users\\corne\\Downloads\\loan_data.csv\"\n",
+    "df = pd.read_csv(data_set)\n",
+    "print(df.head())\n"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "#Now, we must exclude all of the colums i dropped in phase 1.\n",
-    "#keep all of the number columns\n",
-    "#drop the columns that are not needed\n",
-    "featrues_drop = df.drop(columns=['person_gender', 'person_home_ownership', 'loan_intent', 'previous_loan_defaults_on_file','person_education'])\n",
-    "\n",
-    "#Separate the loan_status column (your target y) from the rest of the features.\n",
-    "\n",
-    "#Normalize/scale the remaining numerical features (X).\n",
-    "\n",
-    "#Split your data into training and testing sets.\n",
-    "\n",
-    "#first lets seperate loan status\n",
-    "y = df['loan_status']\n",
-    "#normaliz/scalr the remaining\n",
-    "scale = StandardScaler()\n",
-    "#now split the data for training and tests\n",
-    "#im still using keras and tensorflow for this\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "X = scale.fit_transform(featrues_drop)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "#now this is where i use tensorflow and keras\n",
-    "\n"
+   "execution_count": 5,
+   "id": "d612f5c05eae9b63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\corne\\Downloads\\AIProject\\.venv\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - accuracy: 0.8999 - loss: 0.3525\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 0.9997 - loss: 0.0988\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 0.0402\n",
+      "Epoch 4/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 0.0190\n",
+      "Epoch 5/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 0.0096\n",
+      "Epoch 6/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 0.0050\n",
+      "Epoch 7/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 0.0026\n",
+      "Epoch 8/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 0.0014\n",
+      "Epoch 9/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 7.5497e-04\n",
+      "Epoch 10/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 4.0473e-04\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 2.5831e-04\n",
+      "Test Loss: 0.00025245407596230507\n",
+      "Accuracy: 1.0\n",
+      "Epoch 1/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 0.7906 - loss: 0.4831\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 0.9997 - loss: 0.0235\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 0.0040\n",
+      "Epoch 4/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 0.0012\n",
+      "Epoch 5/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 4.7382e-04\n",
+      "Epoch 6/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 1.9691e-04\n",
+      "Epoch 7/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 8.4876e-05\n",
+      "Epoch 8/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 3.7619e-05\n",
+      "Epoch 9/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 1.7252e-05\n",
+      "Epoch 10/10\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 7.8943e-06\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 1.0000 - loss: 4.2564e-06\n",
+      "Test Loss (Updated Model): 4.343643013271503e-06\n",
+      "Accuracy (Updated Model): 1.0\n"
+     ]
+    }
    ],
-   "id": "d612f5c05eae9b63"
+   "source": [
+    "# Drop unnecessary columns\n",
+    "\n",
+    "featrues_drop = df.drop(columns=['person_gender', 'person_home_ownership', 'loan_intent', 'previous_loan_defaults_on_file', 'person_education'])\n",
+    "\n",
+    "# Separate the target variable (loan_status)\n",
+    "y = df['loan_status']\n",
+    "\n",
+    "# Normalize/scale the remaining numerical features\n",
+    "scale = StandardScaler()\n",
+    "X = scale.fit_transform(featrues_drop)\n",
+    "\n",
+    "# Import TensorFlow and Keras\n",
+    "from tensorflow import keras\n",
+    "\n",
+    "# Start with a logistic regression model (1 neuron)\n",
+    "model = keras.Sequential([\n",
+    "    keras.layers.Dense(1, activation='sigmoid', input_shape=(X.shape[1],))  # Single neuron\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model for a large number of epochs\n",
+    "history = model.fit(X, y, epochs=10, batch_size=32)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "loss, accuracy = model.evaluate(X, y)\n",
+    "print(f\"Test Loss: {loss}\")\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "\n",
+    "# If accuracy is not close to 100%, incrementally add neurons and layers\n",
+    "# Example: Add more neurons and layers if needed\n",
+    "model = keras.Sequential([\n",
+    "    keras.layers.Dense(2, activation='relu', input_shape=(X.shape[1],)),  # 2 neurons in the first layer\n",
+    "    keras.layers.Dense(1, activation='sigmoid')  # Output layer\n",
+    "])\n",
+    "\n",
+    "# Compile the updated model\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the updated model\n",
+    "history = model.fit(X, y, epochs=10, batch_size=32)\n",
+    "\n",
+    "# Evaluate the updated model\n",
+    "loss, accuracy = model.evaluate(X, y)\n",
+    "print(f\"Test Loss (Updated Model): {loss}\")\n",
+    "print(f\"Accuracy (Updated Model): {accuracy}\")\n",
+    "\n",
+    "# Continue adding neurons and layers incrementally until accuracy is close to 100%\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
