Fixed code, added html files into a folder

--- a/Phase1.ipynb
+++ b/Phase1.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9e64e326254be2cc",
    "metadata": {
     "ExecuteTime": {
@@ -286,7 +286,7 @@
    "source": [
     "#normalize the data by dropping columns that are not needed. Only the numerical columns are needed\n",
     "\n",
-    "#drop the columns that are not needed\n",
+    "#drop the columns that are not needed as they have both words and numbers in them\n",
     "drop_features = df.drop(columns=['person_gender', 'person_home_ownership', 'loan_intent', 'previous_loan_defaults_on_file','person_education'])\n",
     "scale = StandardScaler()\n",
     "#scale the data\n",
